dex-ing-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: dex
  namespace: auth
spec:
  ports:
  - name: dex
    port: 5556
    protocol: TCP
    targetPort: 5556
  selector:
    app: dex
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dex
  namespace: auth
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    ingress.kubernetes.io/force-ssl-redirect: 'true'
spec:
  rules:
    - host: dex.k8s.example.org
      http:
        paths:
          - backend:
              serviceName: dex
              servicePort: 5556
            path: /
  tls:
    - hosts:
        - dex.k8s.example.org
      secretName: dex-tls
